# simconnect-sdk-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  Makefile.toml  README.md  TODO.md  build.rs
.github/workflows/: ci.yml  publish.yml  security-audit.yml
examples/: Cargo.toml  README.md  basic.rs  logging.rs
examples/src/: basic.rs  basic_no_macros.rs  basic_with_tracing.rs  basic_without_macro.rs  data.rs  data_multiple_objects.rs  data_with_tracing.rs  data_without_macro.rs  facilities.rs  lib.rs  multiple_objects.rs  subscribe_to_client_events.rs  subscribe_to_system_events.rs  system_events.rs
ffi/include/: SimConnect.h
ffi/lib/: SimConnect.lib
simconnect-sdk/: Cargo.toml  build.rs
simconnect-sdk-derive/: Cargo.toml  README.md
simconnect-sdk-derive/src/: fields.rs  helpers.rs  lib.rs
simconnect-sdk-derive/tests/: 01-parse.rs  02-struct-attr-errors.rs  02-struct-attr-errors.stderr  03-field-attr-errors.rs  03-field-attr-errors.stderr  04-invalid-values.rs  04-invalid-values.stderr  run.rs
simconnect-sdk/ffi/: version.txt
simconnect-sdk/ffi/include/: SimConnect.h  Wrapper.h  WrapperFake.h
simconnect-sdk/ffi/lib/: SimConnect.lib
simconnect-sdk/src/: errors.rs  helpers.rs  lib.rs  macros.rs  simconnect.rs  simconnect_object_ext.rs
simconnect-sdk/src/domain/: airport_data.rs  client_event.rs  condition.rs  data_type.rs  event.rs  events.rs  facilities.rs  group.rs  mod.rs  notification.rs  notification_group.rs  period.rs  system_event.rs
simconnect-sdk/src/simconnect/: base.rs  event_register.rs  events.rs  facilities.rs  mod.rs  objects.rs
src/: errors.rs  lib.rs  simconnect.rs  simconnect_object.rs
src/domain/: data_type.rs  mod.rs  notification.rs  period.rs
