[package]
name = "simconnect-sdk-examples"
version = "0.1.0"
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]
edition = "2021"
description = "SimConnect SDK Examples"
license = "MIT"
publish = false

[[bin]]
name = "basic"
path = "src/basic.rs"

[[bin]]
name = "basic_with_tracing"
path = "src/basic_with_tracing.rs"

[[bin]]
name = "basic_without_macro"
path = "src/basic_without_macro.rs"

[[bin]]
name = "multiple_objects"
path = "src/multiple_objects.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

simconnect-sdk = { path = "../simconnect-sdk", features = ["derive"] }
