[package]
name = "simconnect-sdk-examples"
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]
description = "SimConnect SDK Examples"
readme = "README.md"
repository = "https://github.com/mihai-dinculescu/simconnect-sdk-rs"
publish = false

[[bin]]
name = "data"
path = "src/data.rs"

[[bin]]
name = "data_with_tracing"
path = "src/data_with_tracing.rs"

[[bin]]
name = "data_without_macro"
path = "src/data_without_macro.rs"

[[bin]]
name = "data_multiple_objects"
path = "src/data_multiple_objects.rs"

[[bin]]
name = "facilities"
path = "src/facilities.rs"

[[bin]]
name = "system_events"
path = "src/system_events.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

simconnect-sdk = { path = "../simconnect-sdk", features = ["derive"] }
