[package]
name = "simconnect-sdk-derive"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]
description = "Macros implementation for SimConnect SDK. An opinionated SimConnect Client that encapsulates the C API fully and optimizes for developer experience."
keywords = ["simconnect", "MSFS-2020", "simulation", "aerospace"]
categories = ["aerospace", "simulation", "aerospace::simulation", "games"]
readme = "README.md"
repository = "https://github.com/mihai-dinculescu/simconnect-sdk-rs"
include = ["src/**", "LICENSE", "README.md"]
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/run.rs"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
once_cell = "1.7"

[dev-dependencies]
simconnect-sdk = { path = "../simconnect-sdk" }
trybuild = { version = "1.0", features = ["diff"] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
