[package]
name = "simconnect-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]
description = "SimConnect SDK"
keywords = ["simconnect", "MSFS-2020", "simulation", "aerospace"]
categories = ["aerospace", "simulation", "aerospace::simulation", "games"]
readme = "README.md"
repository = "https://github.com/mihai-dinculescu/simconnect-sdk"
include = ["src/**", "ffi/**/*", "build.rs", "LICENSE", "README.md"]

[features]
default = []
derive = ["simconnect-sdk-derive"]

[build-dependencies]
bindgen = "0.61"

[dependencies]
num_enum = "0.5"
tracing = "0.1"
thiserror = "1.0"
simconnect-sdk-derive = { version = "=0.1.0", path = "../simconnect-sdk-derive", optional = true }

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
