[package]
name = "simconnect-sdk"
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]
description = "SimConnect SDK. An opinionated SimConnect Client that encapsulates the C API fully and optimizes for developer experience."
keywords = ["simconnect", "MSFS-2020", "simulation", "aerospace"]
categories = ["aerospace", "simulation", "aerospace::simulation", "games"]
readme = "README.md"
repository = "https://github.com/mihai-dinculescu/simconnect-sdk-rs"
include = ["src/**", "ffi/**/*", "build.rs", "LICENSE", "README.md"]

[features]
default = []
derive = ["simconnect-sdk-derive"]

[build-dependencies]
bindgen = "0.61"

[dependencies]
num_enum = "0.5"
tracing = "0.1"
thiserror = "1.0"
simconnect-sdk-derive = { version = "=0.2.1", path = "../simconnect-sdk-derive", optional = true }

[package.metadata.docs.rs]
features = ["derive"]
default-target = "x86_64-pc-windows-msvc"
targets = []
